--- a/start/styles.css
+++ b/start/styles.css
@@ -17,7 +17,7 @@ html, body {
   border-radius: 50%;
 }
 .drop-shadow {
-  text-shadow: 1px 2px 3px #000;
+  text-shadow: 2px 2px 3px #000;
 }
 #home-container {
   height: 100%;
@@ -29,6 +29,7 @@ html, body {
   background-color: black;
   background-image: url('img/david.jpg');
   background-repeat: no-repeat;
+  object-fit: contain;
   background-size: cover;
   background-position: 50%;
 }
@@ -68,16 +69,16 @@ html, body {
   color: red;
 }
 .gallery-description {
+  text-align: center;
   padding-top: 15%;
   padding-bottom: 40px;
-  text-align: center;
   color: #FFF;
   font-size: 1.4em;
 }
 
 .r2 {
   display: grid;
-  padding:2em 0ex;
+  padding:2em 0em;
   grid-template-columns: 1fr 1fr 1fr;
   grid-column-gap: 1em;
   justify-items: center;
@@ -91,4 +92,5 @@ html, body {
 .left-align {
   text-align: left;
 }
+
 /* end home page css */
